--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -1,11 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=1234"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=base;Username=base;Password=12345"
   },
   "Jwt": {
     "Key": "T3JKZ5ZEj4-AgKNvjAxzb-qIhDGGWaVGUqmQVlLaWOI",
-    "Issuer": "your_issuer",
-    "Audience": "your_audience"
+    "Issuer": "https://localhost:5001",
+    "Audience": "https://localhost:5001"
   },
   "Logging": {
     "LogLevel": {
