--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    //"DefaultConnection": "Host=localhost;Port=5432;Database=base;Username=base;Password=12345",
-    "DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=1234"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=pwd"
   },
   "Jwt": {
     "Key": "T3JKZ5ZEj4-AgKNvjAxzb-qIhDGGWaVGUqmQVlLaWOI",
