--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -2,6 +2,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=pwd"
   },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:8081"
+      }
+    }
+  },
   "Jwt": {
     "Key": "T3JKZ5ZEj4-AgKNvjAxzb-qIhDGGWaVGUqmQVlLaWOI",
     "Issuer": "https://localhost:5001",
