--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=pwd"
+    "DefaultConnection": "Host=db;Port=5432;Database=base;Username=base;Password=12345",
+    //"DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=pwd"
+
   },
   "Kestrel": {
     "Endpoints": {
