--- a/Presentation/Dockerfile
+++ b/Presentation/Dockerfile
@@ -1,24 +1,34 @@
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-WORKDIR /app
-EXPOSE 8081
-
 # Estágio de build
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
+
+# Copiar os arquivos csproj e restaurar dependências
 COPY ["Presentation/Presentation.csproj", "Presentation/"]
-RUN dotnet restore "./Presentation/Presentation.csproj"
+COPY ["Application/Application.csproj", "Application/"]
+COPY ["Domain/Domain.csproj", "Domain/"]
+COPY ["Infrastructure/Infrastructure.csproj", "Infrastructure/"]
+RUN dotnet restore "Presentation/Presentation.csproj"
+
+# Copiar todo o código e compilar
 COPY . .
-WORKDIR "/src/Presentation"
-RUN dotnet build "./Presentation.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR /src/Presentation
+RUN dotnet build "Presentation.csproj" -c Release -o /app/build
 
 # Estágio de publicação
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Presentation.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Presentation.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 # Estágio final
-FROM base AS final
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
+# Configurar variáveis de ambiente
+ENV ASPNETCORE_ENVIRONMENT=Production
+ENV ASPNETCORE_URLS=http://+:80
+
+# Expor porta
+EXPOSE 80
+
+# Iniciar a aplicação
 ENTRYPOINT ["dotnet", "Presentation.dll"]
